feat: rss feeds in settings
